added images and updated title

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--Tomiko Boyd Profile Website-->
+<!--Tomi Boyd Profile Website-->
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -8,7 +8,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Tomiko Boyd</title>
+        <title>Tomi Boyd</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
@@ -17,7 +17,7 @@
     <body>
         <header>
             <!--use kanji name plate-->
-            <h1>Tomiko Boyd</h1>
+            <h1>Tomi Boyd</h1>
             <!--TODO find out how to make the nav menu have drop-down options-->
             <nav>
                 <ul>
