added images to sections

--- a/index.html
+++ b/index.html
@@ -18,59 +18,64 @@
         <!--NAVIGATION MENU-->
         <header>
             <!--USE KANJI IMAGE-->
+            <img src="./assets/images/tomi.png">
             <h1>tomi boyd</h1>
             <nav>
                 <div>
-                    <button class="dropbtn">Who</button>
+                    <button class="dropbtn"><a href="#about-me">About</a></button>
                     <div>
-                        <a href="#about-me">About Me</a>
-                        <a href="#resume">My Resume</a>
+                        <a href="#./resume.html">Resume</a>
                     </div>
                 </div>
                 <div>
-                    <button class="dropbtn">What</button>
+                    <button class="dropbtn"><a href="#projects">Projects</a></button>
                     <div>
-                        <a href="#completed-projects">Completed Projects</a>
-                        <a href="#upcoming-projects">Coming Soon</a>
+                        <a href="./upcoming-projects.html">Coming Soon</a>
                     </div>
                 </div>
+                <div>
                     <a href="#contact-info">Contact Info</a>
+                </div>
             </nav>
         </header>
 
         <!--HERO/ABOUT ME SECTION-->
-        <section>
+        <section class="about-me" >
             <h2>About Me</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vitae provident amet aliquid eos fugit enim, pariatur possimus nisi itaque harum repellat esse dolore voluptatem corrupti quidem autem fugiat commodi?</p>
             <p>Check Out My <a href="">Resume</a> Here</p>
         </section>
         
         <!--PROJECTS SECTION-->
-        <section>
+        <section class="projects" >
             <h2>My Current Projects</h2>
             <!--MOST RECENT PROJECT-->
             <div>
                 <h3>Run Buddy</h3>
+                <img src="./assets/images/run-buddy.png">
             </div>
             <div>
                 <!--OTHER RECENT PROJECTS-->
                 <div>
                     <h3>Horiseon Refactor</h3>
-                </div>
-                <div>
-                    <h3>Horiseon Refactor</h3>
+                    <img src="./assets/images/horiseon-refactor.png">
                 </div>
                 <div>
                     <h3>Password Generator</h3>
+                    <img src="./assets/images/pass-generator.png">
                 </div>
             </div>
-            <!--LINK TO UPCOMING PROJECTS PAGE-->
-            <a href="">See What's Coming</a>
+            <div>
+                <h3>
+                    <a href="./upcoming-projects.html">Coming Soon</a>
+                </h3>
+            </div>
         </section>
 
         <!--CONTACT INFO SECTION-->
-        <section>
+        <section class="contact-info">
             <!--OLD SCHOOL CONTACT INFO-->
+            <h2>Contact Info</h2>
             <address>
                 1 Bagshot Row <br />
                 Hobbiton, Shire <br />
@@ -89,8 +94,8 @@
 
         <!--FOOTER SECTION-->
         <footer>
-            <!--LINK TO PRIVACY PAGE-->
-            <!--COPYRIGHT W YEAR-->
+            <a href="#tomiboyd">tomi boyd</a>
+            &copy; 2022
         </footer>
         
         <script src="" async defer></script>
