--- a/index.html
+++ b/index.html
@@ -20,34 +20,29 @@
             <!--USE KANJI IMAGE-->
             <img src="./assets/images/tomi.png">
             <h1>tomi boyd</h1>
-            <nav>
-                <div>
-                    <button class="dropbtn"><a href="#about-me">About</a></button>
-                    <div>
-                        <a href="#./resume.html">Resume</a>
-                    </div>
+            <nav class="dropdown-nav">
+                <button class="dropbtn"><a href="#about-me">About</a></button>
+                <div class="dropdown-content">
+                    <a href="#./resume.html">Resume</a>
                 </div>
+                <button class="dropbtn"><a href="#projects">Projects</a></button>
                 <div>
-                    <button class="dropbtn"><a href="#projects">Projects</a></button>
-                    <div>
-                        <a href="./upcoming-projects.html">Coming Soon</a>
-                    </div>
+                    <a href="./upcoming-projects.html">Coming Soon</a>
                 </div>
-                <div>
-                    <a href="#contact-info">Contact Info</a>
-                </div>
+                <a href="#contact-info">Contact</a>
+                <a href="#social-media">Social</a>
             </nav>
         </header>
 
         <!--HERO/ABOUT ME SECTION-->
-        <section class="about-me" >
+        <section id="about-me" >
             <h2>About Me</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vitae provident amet aliquid eos fugit enim, pariatur possimus nisi itaque harum repellat esse dolore voluptatem corrupti quidem autem fugiat commodi?</p>
             <p>Check Out My <a href="">Resume</a> Here</p>
         </section>
         
         <!--PROJECTS SECTION-->
-        <section class="projects" >
+        <section id="projects" >
             <h2>My Current Projects</h2>
             <!--MOST RECENT PROJECT-->
             <div>
@@ -62,19 +57,19 @@
                 </div>
                 <div>
                     <h3>Password Generator</h3>
-                    <img src="./assets/images/pass-generator.png">
+                    <img src="./assets/images/pwgen.webp">
                 </div>
             </div>
             <div>
                 <h3>
                     <a href="./upcoming-projects.html">Coming Soon</a>
                 </h3>
+                <img src="./assets/images/coming-soon3.jpg">
             </div>
         </section>
 
         <!--CONTACT INFO SECTION-->
-        <section class="contact-info">
-            <!--OLD SCHOOL CONTACT INFO-->
+        <section id="contact-info">
             <h2>Contact Info</h2>
             <address>
                 1 Bagshot Row <br />
@@ -82,18 +77,15 @@
                 P: (555)-640-2617 <br />
                 E: <a href="mailto:tomiko.boyd@gmail.com">tomiko.boyd@gmail.com</a>
             </address>
-
-            <!--SOCIAL MEDIA-->
-            <div>
-                <!--USE SOCIAL MEDIA ICONS-->
-                <a href="">Github</a>
-                <a href="">LinkedIn</a>
-                <a href="">Instagram</a>
-            </div>
         </section>
 
         <!--FOOTER SECTION-->
         <footer>
+            <div id="social-media">
+                <!--USE SOCIAL MEDIA ICONS-->
+                <a href="https://github.com/birdsatemyface">Github</a>
+                <a href="https://www.linkedin.com/in/tomikoboyd/">LinkedIn</a>
+            </div>
             <a href="#tomiboyd">tomi boyd</a>
             &copy; 2022
         </footer>
