updated header and nav w drop-down menu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--NAVIGATION MENU-->
         <header class="font-primary">
             <!--USE KANJI IMAGE-->
-            <h1 class="neon-text">富 tomi</h1>
+            <h1 class="neonText">富 tomi</h1>
             <nav>
                 <div class="dropdown">
                     <button class="dropbtn nav-option"><a href="#about-me">About</a></button>
@@ -44,9 +44,6 @@
                 <h2>About</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vitae provident amet aliquid eos fugit enim, pariatur possimus nisi itaque harum repellat esse dolore voluptatem corrupti quidem autem fugiat commodi? Check out my <a href="">Resume</a> here.</p>
             </div>
-            <video playsinline autoplay muted loop poster="./assets/images/about-bkrd.png" id="about-vid">
-                <source src="./assets/images/about-bkgrd.mp4" type="video/mp4">
-            </video>
         </section>
         
         <!--PROJECTS SECTION-->
