updated section headers

--- a/index.html
+++ b/index.html
@@ -18,37 +18,36 @@
     <body>
         <!--NAVIGATION MENU-->
         <header class="font-primary">
-            <!--USE KANJI IMAGE-->
             <h1 class="neonText">富 tomi</h1>
             <nav>
                 <div class="dropdown">
-                    <button class="dropbtn nav-option"><a href="#about-me">About</a></button>
+                    <button class="dropbtn nav-option"><a href="#about-me">ABOUT</a></button>
                     <div class="dropdown-content">
-                        <a href="#./resume.html" target="_blank">Resume</a>
+                        <a href="#./resume.html" target="_blank">RESUME</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="dropbtn nav-option"><a href="#projects">Projects</a></button>
+                    <button class="dropbtn nav-option"><a href="#projects">PROJECTS</a></button>
                     <div class="dropdown-content">
-                        <a href="./upcoming-projects.html" target="_blank">Coming Soon</a>
+                        <a href="./upcoming-projects.html" target="_blank">COMING SOON</a>
                     </div>
                 </div>
-                <a href="#contact-info" class="nav-option">Contact</a>
-                <a href="#social-media" class="nav-option">Social</a>
+                <a href="#contact-info" class="nav-option">CONTACT</a>
+                <a href="#social-media" class="nav-option">SOCIAL</a>
             </nav>
         </header>
 
         <!--HERO/ABOUT ME SECTION-->
         <section id="about-me" class="font-secondary">
             <div>
-                <h2>About</h2>
+                <h2>ABOUT</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vitae provident amet aliquid eos fugit enim, pariatur possimus nisi itaque harum repellat esse dolore voluptatem corrupti quidem autem fugiat commodi? Check out my <a href="">Resume</a> here.</p>
             </div>
         </section>
         
         <!--PROJECTS SECTION-->
         <section id="projects" class="font-secondary">
-            <h2>Projects</h2>
+            <h2>PROJECTS</h2>
             <!--MOST RECENT PROJECT-->
             <div class="projects-primary">
                 <h3>Run Buddy</h3>
@@ -77,10 +76,10 @@
             </div>
         </section>
 
-        <!--CONTACT INFO SECTION-->
-        <section id="contact-info" class="font-secondary">
-            <h2>Contact</h2>
-            <address>
+        <!--FOOTER AND CONTACT SECTION-->
+        <!--ADD REQ FORM HERE - SEE RUNBUD-->
+        <footer>
+            <address id="contact-info">
                 <a href="https://goo.gl/maps/vPhy5YFsuyYt3K849" target="_blank">
                 2 Darnley Rd. <br />
                 Weetwood, Leeds <br />
@@ -88,11 +87,6 @@
                 P: (555)-640-2617 <br />
                 E: <a href="mailto:tomiko.boyd@gmail.com">tomiko.boyd@gmail.com</a>
             </address>
-        </section>
-
-        <!--FOOTER SECTION-->
-        <!--ADD REQ FORM HERE - SEE RUNBUD-->
-        <footer class="font-primary">
             <div id="social-media">
                 <!--USE SOCIAL MEDIA ICONS-->
                 <a href="https://github.com/birdsatemyface" target="_blank">Github</a>
